--- a/index.html
+++ b/index.html
@@ -1,41 +1,165 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        
+        .example {
+            width: 1000px;
+            height: 1200px;
+            background-color: bisque;
+            margin-left: 100px;
+            padding-top:20px;
+        }
+        .example_name {
+           font-style:normal; 
+           font-family: Georgia ; 
+           font-weight: 1000; 
+           font-size: 80px;
+           line-height: 5px;
+           color: lightpink;
+           margin-bottom: 10px;
+        }
+        .link {
+           font-style: normal; 
+           font-weight: 100;
+           margin-left: 100px; 
+           font-size: 30px;
+           color: #000000;
+           margin-bottom: 40px;
+        }
+        .about_example {
+           font-style:normal; 
+           font-family: Georgia ; 
+           font-weight: 1000; 
+           font-size: 40px;
+           margin-left: 20px;
+           margin-right: 20px;
+           line-height: 80px;
+           color: #ffffff;
+           margin-bottom: 30px;
+           background: lightpink;
+        }
+        .example_definition {
+           font-style:normal; 
+           font-family: Georgia ; 
+           font-weight: 1000; 
+           font-size: 25px;
+           margin-left: 20px;
+           margin-right: 20px;
+           line-height: 25px;
+           color: #ffffff;
+           background-color: lightpink;
+        }
+        .options_list {
+           font-style:normal; 
+           font-family: Georgia ; 
+           font-weight: 1000; 
+           font-size: 20px;
+           margin-left: 20px;
+           margin-right: 20px;
+           line-height: 25px;
+           color: lightpink;
+           background-color:white ;
+        }
+        .example_photo {
+           margin-left: 20px;
+        }
+        .analogue {
+            width: 1000px;
+            height: 1300px;
+            background-color: bisque;
+            margin-left: 100px;
+            padding-top:20px;
+        }
+         .analogue_name {
+           font-style:normal; 
+           font-family: Georgia ; 
+           font-weight: 1000; 
+           font-size: 80px;
+           line-height: 5px;
+           color: lightpink;
+           margin-bottom: 30px;
+        }
+        .about_analogue {
+           font-style:normal; 
+           font-family: Georgia ; 
+           font-weight: 1000; 
+           font-size: 40px;
+           margin-left: 20px;
+           margin-right: 20px;
+           line-height: 80px;
+           color: #ffffff;
+           margin-bottom: 50px;
+           background: lightpink;
+        }
+        .analogue_definition {
+           font-style:normal; 
+           font-family: Georgia ; 
+           font-weight: 1000; 
+           font-size: 25px;
+           margin-left: 20px;
+           margin-right: 20px;
+           line-height: 25px;
+           color: #ffffff;
+           background-color: lightpink;
+        }
+        .money_list {
+           font-style:normal; 
+           font-family: Georgia ; 
+           font-weight: 1000; 
+           font-size: 20px;
+           margin-left: 20px;
+           margin-right: 20px;
+           line-height: 25px;
+           color: lightpink;
+           background-color:white ;
+        }
+        .analogue_photo {
+           margin-left: 20px;
+        }
+    </style>
 </head>
-
 <body>
-  <h1>Behance</h1> 
- <u><a href="https://www.behance.net/">Сайт Behance </a></u>
-  <h2>Опис сайту-приклада</h2> <br>
-  <i> <b>Behance</b> - це онлайн-платформа для творчих людей, яка дозволяє художникам, дизайнерам, фотографам, графічним дизайнерам, ілюстраторам демонструвати свої роботи, спілкуватися зі спільнотою та знаходити натхнення. Ось ключовий перелік можливостей, які пропонує Behance:</i> <br>
-  <p><li>Користувачі можуть створити власний профіль, додавши інформацію про себе, свої навички та інтереси</li> <br>
-  <li>Behance надає можливість завантажувати свої роботи та створювати вражаючі портфоліо, які легко організувати та показати світу.</li> <br>
-  <li>Користувачі можуть створювати та вказувати участь у проектах, взаємодіяти з іншими творчими спеціалістами та отримувати фідбек щодо своєї роботи.</li></p> <br>
-  
-   <img src="https://miro.medium.com/v2/resize:fit:1200/1*WfyrTAW8XCyTC93c0fhRkg.png" width="1000" height="500" /> 
-  <h2>Аналог сайту-приклада</h2> 
-  <h1>Handcraft</h1> <br>
-  <i> <b>Handcraft</b> - це онлайн-платформа, де творці ручних робіт можуть поділитися своїми унікальними проектами та продавати власні вироби. Спеціалізація платформи полягає в ручному в'язанні, пошитті, кастомізації одягу, виготовленні сумок та багатьох інших видів рукоділля. Існує кілька способів заробітку з цього сайту: </i> <br>
-  <p><li>Стягування комісії з кожної угоди: Платформа може забирати певний процент від кожної продажу, здійсненого через сайт. </li> <br>
-  <li>Реклама: Платформа може співпрацювати з рекламодавцями і дозволяти розміщення рекламних банерів чи спонсорованих дописів на сайті. </li> <br>
-  <li>Платні підписки: Платформа може пропонувати користувачам платні підписки на різні рівні облікових записів з різними функціями та можливостями.</li> <br>
-   <br>
- <img src="https://i.ibb.co/5WKqR0B/behance.png" width="500" height="500" /><img src="https://i.ibb.co/GnnV8bS/image.jpg" width="500" height="500" /> 
-  
- 
-  <script src="script.js"></script>
+    <div class="main">
+    <div class=example>
+        <h1 class="example_name"><center>Behance</center></h1>
+        <u class="link"><center><a href="https://www.behance.net/">Сайт Behance </a></center></u>
+        <h2 class="about_example"><center>Опис сайту-приклада</h2></center> 
+        <p class="example_definition"> <b>Behance</b> - це онлайн-платформа для творчих людей, яка дозволяє художникам, дизайнерам, фотографам,
+            графічним дизайнерам, ілюстраторам демонструвати свої роботи, спілкуватися зі спільнотою та знаходити натхнення.
+            Ось ключовий перелік можливостей, які пропонує Behance:</p> 
+            <ol class="options_list">
+            <li class="option">Користувачі можуть створити власний профіль, додавши інформацію про себе, свої навички та інтереси</li> <br>
+            <li class="option">Behance надає можливість завантажувати свої роботи та створювати вражаючі портфоліо, які легко організувати
+                та показати світу.</li> <br>
+            <li class="option">Користувачі можуть створювати та вказувати участь у проектах, взаємодіяти з іншими творчими спеціалістами та
+                отримувати фідбек щодо своєї роботи.</li> </ol>
+         <br> 
+        <div class="example_photo"><img src="https://miro.medium.com/v2/resize:fit:1200/1*WfyrTAW8XCyTC93c0fhRkg.png"width="960" height="550" /> </div>
+        </div>
 
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/@KatierinaPriadk/Hello#behance.png"></script>
+    <div class=analogue>
+    <h2 class="about_analogue"><center>Аналог сайту-приклада</center></h2>
+    <h1 class="analogue_name"><center>Handcraft</center></h1> <br>
+    <p class="analogue_definition"> <b>Handcraft</b> - це онлайн-платформа, де творці ручних робіт можуть поділитися своїми унікальними проектами та
+        продавати власні вироби. Спеціалізація платформи полягає в ручному в'язанні, пошитті, кастомізації одягу,
+        виготовленні сумок та багатьох інших видів рукоділля. Існує кілька способів заробітку з цього сайту: </p> 
+        <ol class="money_list">
+        <li>Стягування комісії з кожної угоди: Платформа може забирати певний процент від кожної продажу, здійсненого
+            через сайт. </li> <br>
+        <li>Реклама: Платформа може співпрацювати з рекламодавцями і дозволяти розміщення рекламних банерів чи
+            спонсорованих дописів на сайті. </li> <br>
+        <li>Платні підписки: Платформа може пропонувати користувачам платні підписки на різні рівні облікових записів з
+            різними функціями та можливостями.</li> </ol>
+        <br>
+        <div class="analogue_photo">
+        <img src="https://i.ibb.co/5WKqR0B/behance.png" width="460" height="500" /><img
+            src="https://i.ibb.co/GnnV8bS/image.jpg" width="500" height="500" />
+        </div> 
+        </div>
+        </div>
 </body>
-
 </html>
